[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loone"
version = "0.1.4"
description = "LOONE: A comprehensive water balance-nutrient-optimization model"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Osama Tarabih", email = "osamatarabih@usf.edu" },
]
maintainers = [
    { name = "Michael Souffront", email = "msouffront@aquaveo.com" },
    { name = "James Dolinar", email = "jdolinar@aquaveo.com" },
]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "platypus-opt==1.0.4",
    "scipy",
    "pyyaml",
]
[tool.setuptools.packages.find]
include = ["loone*"]
